tests/files/type_checker_tests/should_pass/122.cmdr
//Test that and operation type checks
x = true && false;
