tests/files/type_checker_tests/should_fail/030.cmdr
//Should fail on and when types are incompatible
x = true && 1;